Fix: Z-index of elements prevented the hover effects from working properly

--- a/css/style.css
+++ b/css/style.css
@@ -270,6 +270,10 @@ body {
     z-index: 2;
 }
 
+.not-blurred{
+    z-index: -1;
+}
+
 /* Sections and content style*/
 
 #content{
@@ -300,10 +304,6 @@ body {
     border-radius: 15px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 6px 20px rgba(0, 0, 0, 0.1);
     margin: 8px 16px;
-}
-
-#about-me{
-    z-index: 1;
 }
 
 #about-me p{
@@ -338,7 +338,6 @@ body {
     margin: 10px 8px 10px 8px;
     overflow: hidden;
     word-wrap: break-word;
-    z-index: 1;
 }
 
 .skills-tag:hover{
@@ -377,7 +376,6 @@ body {
 /*Portfolio styling*/
 #portfolio{
     display: block;
-    z-index: 1;
 }
 
 .panel-container{
@@ -390,7 +388,6 @@ body {
     display: block;
     height: 40vh;
     min-width: 300px;
-    z-index: 1;
     transition: all 0.2s ease-in;
     cursor: pointer;
 }
@@ -422,7 +419,6 @@ body {
     border-bottom-left-radius: 12px;
     padding: 24px;
     background-color: #fff;
-    z-index: 1;
     box-shadow: -2px 4px 8px rgba(0, 0, 0, 0.1), -3px 6px 20px rgba(0, 0, 0, 0.1);
     grid-area: form;
 }
@@ -525,7 +521,6 @@ button:focus{
     -webkit-box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.164);
             box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.164);
     padding: 0;
-    z-index: 1;
 }
 
 .copy-text{
